--- a/src/scss/blocks.scss
+++ b/src/scss/blocks.scss
@@ -1,114 +1,63 @@
+// -----------------------------------------------------------------------------
+// Blocos base para duplos, triplos e quádruplos
+// -----------------------------------------------------------------------------
 
-// @media (min-width:320px) { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
-// @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ }
-// @media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
-// @media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
-// @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
-// @media (min-width:1281px) { /* hi-res laptops and desktops */ }
+.container > section {
+    display: block;
+    margin-top: $gap;
 
-// main > section {
-//     display: block;
-//     margin-top: $gap;
+    & > div {
+       background-color: rgb(83, 109, 255);
+       color: white;
+       font-family: monospace;
+       font-size: 13px;
+       height: 200px;
+       min-width: 0;
+       padding: 0.5em;
 
-//     & > div {
-//         background-color: rgb(83, 109, 255);
-//         height: 200px;
-//         color: white;
-//         font-family: monospace;
-//         font-size: 13px;
-//         min-width: 0;
-//         padding: 0.5em;
+       & + div {
+           margin-left: 0;
+           margin-top: $gap;
+       }
+   }
 
-//         & + div {
-//             margin-left: 0;
-//             margin-top: $gap;
-//         }
+   & + section {
+       margin-top: $gap;
+   }
+}
 
-//         &.break {
-//             flex-basis: 100%;
-//             height: 5px;
-//             background-color: red;
-//         }
-//     }
+@media (min-width:600px) { 
+   .container > section {
+        display: flex;
+        flex-wrap: wrap;
+        width: auto;
+        flex-grow: 1;
 
-//     & + section {
-//         margin-top: $gap;
-//     }
-// }
+       & > div {
+           flex: auto;
 
-// @media (min-width:600px) { 
-//     main > section {
-//         display: flex;
-//         flex-wrap: wrap;
+           & + div {
+               margin-top: 0;
+               margin-left: $gap;
+           }
+       }
+   }
+}
 
-//         & > div {
-//             flex: auto;
+@media (min-width:900px) { 
+    .container > section {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
 
-//             & + div {
-//                 margin-top: 0;
-//                 margin-left: $gap;
-//             }
-
-//             &.break {
-//                 flex-basis: 100%;
-//                 display: block;
-//                 height: 0;
-//                 padding: 0;
-//                 margin-top: $gap;
-//             }
-
-//             &:nth-child(4n) {
-//                 margin-left: 0
-//             }
-//         }
-//     }
-// }
-
-// @media (min-width:900px) { 
-//     body {
-//         display: flex;
-//         justify-content: center;
-//     }
-
-//     main {
-//         width: 900px
-//     }
-// }
-
-// @media (min-width:1025px) { 
-//     main > section {
-        
-//         & > div {
-            
-//             & + div {
-//                 margin-top: 0;
-//                 margin-left: $gap;
-//             }
-//         }
-//     }
-// }
-
-
-// @media (min-width:1310px) { 
-//     main {
-//         width: 1310px
-//     }
-
-//     main > section {
-        
-//         & > div {
-
-//             &.break {
-//                 flex-basis: 100%;
-//                 display: none;
-//                 height: 0;
-//                 padding: 0;
-//                 margin-top: $gap;
-//             }
-
-//             &:nth-child(4n) {
-//                 margin-left: $gap
-//             }
-//         }
-//     }
-// }
+@media (min-width:1025px) { 
+   .container > section {
+       & > div {
+           & + div {
+               margin-top: 0;
+               margin-left: $gap;
+           }
+       }
+   }
+}
