--- a/src/scss/container.scss
+++ b/src/scss/container.scss
@@ -1,3 +1,9 @@
+// -----------------------------------------------------------------------------
+// Conteineres
+// .container: bloco centralizado que se ajusta conforme a largura do dispositivo
+// .wrapper: bloco 100% para envolver o .container e possibilitar fundo colorido
+// juntamente com ajuste interno do conteúdo conforme a largura do dispositivo
+// -----------------------------------------------------------------------------
 
 // @media (min-width:320px) { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
 // @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ }
@@ -6,27 +12,48 @@
 // @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
 // @media (min-width:1281px) { /* hi-res laptops and desktops */ }
 
-// @if $develepment {
-//     border-radius: math.div($size, 2);
-//   }
-
 body {
     display: block;
+}
+
+header {
+    background-color: orange;
+}
+
+.wrapper  > .container > section {
+    margin-top: 0;
 }
 
 @media (min-width:900px) { 
     body {
         display: flex;
+        flex-direction: column;
         justify-content: center;
     }
 
-    main {
-        width: 900px
+    .wrapper {
+        display: flex;
+        justify-content: center;
+        background-color: red;
+        
+        & + .wrapper {
+            margin-top: $gap;
+        }
+
+        & > .container > section {
+            background-color: green !important;
+        }
+    }
+
+    .container {
+        align-self: center;
+        width: 900px;
+        height: auto;
     }
 }
 
 @media (min-width:1310px) { 
-    main {
+    .container {
         width: 1310px
     }
 }
