--- a/src/scss/container.scss
+++ b/src/scss/container.scss
@@ -12,16 +12,14 @@
 // @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
 // @media (min-width:1281px) { /* hi-res laptops and desktops */ }
 
-body {
-    display: block;
-}
+.wrapper {
+    & + .wrapper {
+        margin-top: $gap;
+    }
 
-header {
-    background-color: orange;
-}
-
-.wrapper  > .container > section {
-    margin-top: 0;
+    & > .container > section {
+        margin-top: 0;
+    }
 }
 
 @media (min-width:900px) { 
@@ -34,15 +32,6 @@ header {
     .wrapper {
         display: flex;
         justify-content: center;
-        background-color: red;
-        
-        & + .wrapper {
-            margin-top: $gap;
-        }
-
-        & > .container > section {
-            background-color: green !important;
-        }
     }
 
     .container {
