--- a/src/scss/blocks-quad.scss
+++ b/src/scss/blocks-quad.scss
@@ -10,8 +10,10 @@
     & > div {
         &.break {
             flex-basis: 100%;
-            height: 5px;
-            background-color: red;
+            display: block;
+            height: 0;
+            padding: 0;
+            margin-top: 0;
         }
     }
 }
@@ -24,10 +26,6 @@
             flex-basis: 45%;
         
             &.break {
-                flex-basis: 100%;
-                display: block;
-                height: 0;
-                padding: 0;
                 margin-top: $gap;
             }
 
@@ -46,11 +44,7 @@
             flex-basis: 20%;
         
             &.break {
-                flex-basis: 100%;
                 display: none;
-                height: 0;
-                padding: 0;
-                margin-top: $gap;
             }
 
             &:nth-child(4n) {
