Ajustes nos blocos e separação de contextos

--- a/src/app.scss
+++ b/src/app.scss
@@ -31,9 +31,9 @@ header {
 //     }
 // }
 
-@import 'scss/colors.scss';
-@import 'scss/container.scss';
-@import 'scss/blocks.scss';
-@import 'scss/blocks-double.scss';
-@import 'scss/blocks-triple.scss';
-@import 'scss/blocks-quad.scss';
+// @import 'scss/framework/colors.scss';
+@import 'scss/framework/container.scss';
+@import 'scss/framework/blocks.scss';
+@import 'scss/framework/blocks-double.scss';
+@import 'scss/framework/blocks-triple.scss';
+@import 'scss/framework/blocks-quad.scss';
