--- a/src/scss/home/action-bar.scss
+++ b/src/scss/home/action-bar.scss
@@ -3,12 +3,85 @@
     margin-top: -100px;
 
     & section {
+        background-color: #fff;
+        border-radius: 25px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, .3);
+        position: relative;
+
         & div {
-            background-color: #fff;
-            border-radius: 25px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, .3);
             height: 170px;
+            // padding: 20px;
+            display: grid;
+            grid-template-areas:
+                'icon title'
+                'icon text';
+            grid-template-columns: 50% 50%;
             position: relative;
+            color: #274760;
+
+            & > i {
+                grid-area: icon;
+                font-size: 42px;
+                position: absolute;
+                top: 50%;
+                margin-top: -30px;
+                right: 10px;
+            }
+
+            & > h3 {
+                position: absolute;
+                bottom: 0;
+                display: flex;
+                text-align: left;
+                grid-area: title;
+                margin: 0;
+                font-size: 14px;
+            }
+
+            & > p,
+            & > a {
+                text-align: left;
+                grid-area: text;
+                margin: 0;
+                margin-top: 5px;
+                font-size: 18px;
+                font-weight: medium;
+                color: #c2c2c2;
+            }
+
+            & > a {
+                text-decoration: none;
+            }
+
+            & > button {
+                height: 60px;
+                position: absolute;
+                top: 50%;
+                margin-top: -25px;
+                right: 50%;
+                margin-right: -100px;
+                width: 200px;
+                background-color: #37c871;
+                border-radius: 50px;
+                border: 0;
+                padding: 0 20px;
+                font-size: 18px;
+                font-weight: normal;
+                text-shadow: 0 0 5px rgba(0, 0, 0, .3);
+                color: #fff;
+            }
         }
+    }
+}
+
+@media (max-width:1310px) { 
+    .action-bar.large {
+        display: none;
+    }
+}
+
+@media (min-width:1311px) { 
+    .action-bar.medium {
+        display: none;
     }
 }
