--- a/src/scss/home/jumbo.scss
+++ b/src/scss/home/jumbo.scss
@@ -24,19 +24,19 @@ body > header {
         font-weight: bold;
     }
 
-    & a {
+    & button {
         display: block;
         position: absolute;
         bottom: 100px;
         left: 50%;
         margin: 0;
-        margin-left: -140px;
+        margin-left: -125px;
         text-align: left;
         text-decoration: none;
         color: $textPrimary;
         font-size: 16px;
         font-family: 'Montserrat';
-        width: 280px;
+        width: 250px;
         
         background-color: rgba(255, 255, 255, .9);
         border-radius: 40px;
@@ -45,9 +45,7 @@ body > header {
         box-shadow: 0px 0px 10px rgba(0, 0, 0, .1);
 
         & i {
-            margin: 20px;
-            margin-top: 22px;
-            transform: scale(2.5);
+            margin: 20px 0;
         }
 
         &:hover {
@@ -67,11 +65,10 @@ body > header {
             font-size: 24px;
         }
 
-        & a {
+        & button {
             bottom: 120px;
             left: 5%;
             font-size: 16px;
-            width: 280px;
             margin-left: 0;
         }
     }
