--- a/src/app.scss
+++ b/src/app.scss
@@ -35,6 +35,7 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/brands';
 
 main,
 body {
@@ -60,4 +61,5 @@ body {
 @import 'scss/framework/blocks-quad.scss';
 
 @import 'scss/home/jumbo.scss';
-@import 'scss/home/action-bar.scss';
+@import 'scss/home/navbar.scss';
+@import 'scss/home/actionbar.scss';
