--- a/src/scss/home/actionbar.scss
+++ b/src/scss/home/actionbar.scss
@@ -69,6 +69,11 @@
                 font-weight: normal;
                 text-shadow: 0 0 5px rgba(0, 0, 0, .3);
                 color: #fff;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: lighten(#37c871, 10%);
+                }
             }
         }
     }
