--- a/src/scss/home/jumbo.scss
+++ b/src/scss/home/jumbo.scss
@@ -65,7 +65,6 @@ body > header {
     body > header {
         & h1 {
             top: 260px;
-            left: 5%;
             display: block;
             width: 40%;
             font-size: 24px;
@@ -73,9 +72,14 @@ body > header {
 
         & button {
             bottom: 120px;
-            left: 5%;
             font-size: 16px;
             margin-left: 0;
+        }
+
+        & h1,
+        & h2,
+        & button {
+            left: 5%;
         }
     }
 }
@@ -105,10 +109,21 @@ body > header {
             display: block;
             top: 520px;
             font-size: 16px;
-            width: 45%;
-            left: 5%;
+            width: 40%;
             font-weight: 300;
         }
     }
 }
+
+@media (min-width:1310px) { 
+    body > header {
+        & h1,
+        & h2,
+        & button {
+            left: 10%;
+        }
+    }
+}
+
+
 
