Adicionada a base do rodapé

--- a/src/app.scss
+++ b/src/app.scss
@@ -63,3 +63,5 @@ body {
 @import 'scss/home/jumbo.scss';
 @import 'scss/home/navbar.scss';
 @import 'scss/home/actionbar.scss';
+
+@import 'scss/home/footer.scss';
