--- a/src/scss/home/jumbo.scss
+++ b/src/scss/home/jumbo.scss
@@ -1,6 +1,7 @@
 
 body > header {
-    background-image: url('img/jumbo-bg.png');
+    background-image: url('img/header.svg');
+    background-color: #f3edeb;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
