Ajustes do bloco triplo

--- a/src/app.scss
+++ b/src/app.scss
@@ -63,5 +63,6 @@ body {
 @import 'scss/home/jumbo.scss';
 @import 'scss/home/navbar.scss';
 @import 'scss/home/actionbar.scss';
+@import 'scss/home/triad.scss';
 
 @import 'scss/home/footer.scss';
