--- a/src/scss/home/jumbo.scss
+++ b/src/scss/home/jumbo.scss
@@ -19,6 +19,7 @@ body > header {
         color: $textPrimary;
         font-size: 24px;
         font-family: 'Montserrat';
+        transition: all .5s;
     }
 
     & h1 {
