--- a/src/scss/framework/blocks-triple.scss
+++ b/src/scss/framework/blocks-triple.scss
@@ -5,12 +5,38 @@
 // seções triplas nos demais
 // -----------------------------------------------------------------------------
 
+@media (max-width:600px) { 
+    .container > .triple {
+        & > div {
+            margin-left: 1em;
+            margin-top: 1em;
+        }
+
+        & + div {
+            margin-left: 0;
+        }
+    }
+}
+
 @media (min-width:600px) {
     .container > .triple {
         & > div {
             flex-grow: 1;
             flex-shrink: 0;
             flex-basis: 25%;
+        }
+
+        & > div:nth-child(3) {
+            margin-left: 0;
+        }
+    }
+}
+
+@media (min-width:600px) and (max-width:1310px) { 
+    .container > .triple {
+        & > div:nth-child(3) {
+            margin-left: 1em;
+            margin-top: 1em;
         }
     }
 }
