--- a/src/scss/home/footer.scss
+++ b/src/scss/home/footer.scss
@@ -4,6 +4,7 @@ footer.content {
     background-position: top center;
     background-repeat: no-repeat;
     background-position-y: -5px;
+    margin-top: 100px;
 
     & > .container > section {
         & > div {
