--- a/src/scss/components/box-double.scss
+++ b/src/scss/components/box-double.scss
@@ -6,7 +6,7 @@
 .wrap.box-double {
     display: grid;
 
-    & div {
+    & > div {
         min-height: $box-min-height;
 
         & + div {
@@ -34,11 +34,11 @@
 
         grid-template-columns: $column $box-gap $column;
 
-        & div:nth-child(1) {
+        & > div:nth-child(1) {
             grid-area: one;
         }
 
-        & div:nth-child(2) {
+        & > div:nth-child(2) {
             grid-area: two;
             margin-top: 0;
         }
