--- a/src/app.scss
+++ b/src/app.scss
@@ -1,34 +1,21 @@
-$env: 'development';
-$gap: 1em;
-$textPrimary: #ad3f45;
-
-// @media (min-width:320px) { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
-// @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ }
-// @media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
-// @media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
-// @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
-// @media (min-width:1281px) { /* hi-res laptops and desktops */ }
-
-// :root {
-//     --nav-height: 40px;
-// }
+$text-primary: #ad3f45;
 
 @font-face {
     font-family: 'Montserrat';
     src: url('fonts/montserrat-latin-300-normal.woff') format('woff');
-    font-weight: normal
+    font-weight: 300
 }
 
 @font-face {
     font-family: 'Montserrat';
     src: url('fonts/montserrat-latin-500-normal.woff') format('woff');
-    font-weight: medium;
+    font-weight: 500;
 }
 
 @font-face {
     font-family: 'Montserrat';
     src: url('fonts/montserrat-latin-700-normal.woff') format('woff');
-    font-weight: bold;
+    font-weight: 700;
 }
 
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts'; 
@@ -43,15 +30,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat';
+    background-color: #f5f5f5
 }
-
-// .triple div {
-//     margin-top: 30px !important;
-
-//     &:nth-child(2) {
-//         margin-top: 0 !important;
-//     }
-// }
 
 @import 'scss/components/components.scss';
 
@@ -62,9 +42,8 @@ body {
 // @import 'scss/framework/blocks-triple.scss';
 // @import 'scss/framework/blocks-quad.scss';
 
-// @import 'scss/home/jumbo.scss';
-// @import 'scss/home/navbar.scss';
-// @import 'scss/home/actionbar.scss';
-// @import 'scss/home/triad.scss';
-
-// @import 'scss/home/footer.scss';
+@import 'scss/home/jumbo.scss';
+@import 'scss/home/navbar.scss';
+@import 'scss/home/actionbar.scss';
+@import 'scss/home/our-values.scss';
+@import 'scss/home/footer.scss';
