--- a/src/scss/components/box-quad.scss
+++ b/src/scss/components/box-quad.scss
@@ -6,7 +6,7 @@
 .wrap.box-quad {
     display: grid;
 
-    & div {
+    & > div {
         min-height: $box-min-height;
 
         & + div {
@@ -34,21 +34,21 @@
 
         grid-template-columns: $column $box-gap $column;
 
-        & div:nth-child(1) {
+        & > div:nth-child(1) {
             grid-area: one;
         }
 
-        & div:nth-child(2) {
+        & > div:nth-child(2) {
             grid-area: two;
             margin-top: 0;
         }
 
-        & div:nth-child(3) {
+        & > div:nth-child(3) {
             grid-area: three;
             margin-top: $box-gap;
         }
 
-        & div:nth-child(4) {
+        & > div:nth-child(4) {
             grid-area: four;
             margin-top: $box-gap;
         }
@@ -70,8 +70,8 @@
 
         grid-template-columns: $column $box-gap $column $box-gap $column $box-gap $column;
 
-        & div:nth-child(3),
-        & div:nth-child(4) {
+        & > div:nth-child(3),
+        & > div:nth-child(4) {
             margin-top: 0;
         }
     }
