--- a/src/scss/components/box-triple-static.scss
+++ b/src/scss/components/box-triple-static.scss
@@ -6,7 +6,7 @@
 .wrap.box-triple-static {
     display: grid;
 
-    & div {
+    & > div {
         min-height: $box-min-height;
 
         & + div {
@@ -25,15 +25,15 @@
 
         grid-template-columns: auto 350px auto;
 
-        & div:nth-child(1) {
+        & > div:nth-child(1) {
             grid-area: one;
         }
 
-        & div:nth-child(2) {
+        & > div:nth-child(2) {
             grid-area: two;
         }
 
-        & div:nth-child(3) {
+        & > div:nth-child(3) {
             grid-area: three;
         }
     }
@@ -51,16 +51,16 @@
 
         grid-template-columns: auto 170px 170px $box-gap 170px 170px auto;
 
-        & div:nth-child(1) {
+        & > div:nth-child(1) {
             grid-area: one;
         }
 
-        & div:nth-child(2) {
+        & > div:nth-child(2) {
             grid-area: two;
             margin-top: 0;
         }
 
-        & div:nth-child(3) {
+        & > div:nth-child(3) {
             grid-area: three;
             margin-top: $box-gap;
         }
@@ -95,7 +95,7 @@
 
         grid-template-columns: auto 350px auto 350px auto 350px auto;
 
-        & div:nth-child(3) {
+        & > div:nth-child(3) {
             grid-area: three;
             margin-top: 0;
         }
