--- a/src/scss/home/footer.scss
+++ b/src/scss/home/footer.scss
@@ -5,168 +5,208 @@ footer.content {
     background-repeat: no-repeat;
     background-position-y: -5px;
     margin-top: 100px;
+    font-family: 'Montserrat';
+    font-weight: 300;
 
-    & > .container > section {
-        & > div {
-            display: grid;
-            grid-template-areas:
-                'logo'
-                'colone';
-            grid-template-columns: 100% 100%;
-            padding-bottom: 20px;
+    & .wrap > div {
+        display: grid;
+        grid-template-areas:
+            'logo'
+            'one'
+            'two'
+            'three';
 
-            & img {
-                grid-area: logo;
-                position: relative;
-                left: 50%;
-                width: 313px;
-                height: 241px;
-                margin-left: -156px;
-                margin-top: -70px;
-            }
-
-            & > div.column-one {
-                grid-area: colone;
-                color: #2a475d;
-                padding-left: 10%;
-                padding-top: 20px;
-
-                & span {
-                    display: block;
-                    padding-bottom: 20px; 
-                }
-            }
-
-            & > div.column-two,
-            & > div.column-three {
-                display: none;
-            }
-
-            // & > div.column-one {
-            //     grid-area: colone;
-            //     color: #2a475d;
-            //     padding-left: 20px;
-
-            //     & span {
-            //         display: block;
-            //         padding-bottom: 20px; 
-            //     }
-            // }
-
-            // & > div.column-two,
-            // & > div.column-three {
-            //     padding-top: 40px;
-
-            //     & a {
-            //         display: block;
-            //         text-decoration: none;
-            //         color: #2a475d;
-            //         padding-bottom: 20px; 
-            //     }
-            // }
-        }
-    }
-}
-
-footer.bottom {
-    margin-top: 0 !important;
-    background-color: #2a475d;
-    height: $navHeight;
-    line-height: $navHeight;
-    color: white;
-
-    & > .container > section {
-        & > div.social {
-            // display: flex;
-            display: none;
-            padding-left: 20px;
-    
-            & a {
-                padding-left: 20px;
-                color: white;
-                text-decoration: none;
-    
-                &:hover {
-                    color: #c5e2f0;
-                }
-    
-                & span {
-                    display: none;
-                }
-            }
-        }
-    
-        & > div.copy {
-            padding-right: 20px;
-            text-align: center;
-            margin-top: 0;
-    
-            & span {
-                display: none;
-            }
-        }
-    }
-}
-
-@media (min-width:600px) { 
-    footer.bottom  > .container > section {
-        & > div.social {
-            display: none;
+        & > img {
+            grid-area: logo;
+            position: relative;
+            left: 50%;
+            width: 313px;
+            height: 241px;
+            margin-left: -156px;
+            margin-top: -70px;
         }
 
-        & > div.copy {
-            text-align: center;
-
-            span {
-                display: inline;
-            }
-        }
-    }
-}
-
-@media (min-width:800px) {
-    footer.content {
-        & > .container > section {
-            & > div {
-                display: grid;
-                grid-template-areas:
-                    'logo logo logo'
-                    'colone coltwo colthree';
-                grid-template-columns: 50% 25% 25%;
+        & > div.column-one {
+            grid-area: one;
+            background-color: red;
+            
+            color: #2a475d;
+            
+            & h2 {
+                font-size: 24px;
+                font-weight: 700;
                 padding-bottom: 20px;
-    
-                & > div.column-one {
-                    grid-area: colone;
-                    color: #2a475d;
-                    padding-left: 20px;
-    
-                    & span {
-                        display: block;
-                        padding-bottom: 20px; 
-                    }
-                }
-    
-                & > div.column-two,
-                & > div.column-three {
-                    display: block;
-                    padding-top: 40px;
-    
-                    & a {
-                        display: block;
-                        text-decoration: none;
-                        color: #2a475d;
-                        padding-bottom: 20px; 
-                    }
-                }
             }
         }
+
+        & > div.column-two {
+            grid-area: two;
+            background-color: green;
+        }
+
+        & > div.column-three {
+            grid-area: three;
+            background-color: blue;
+        }
+
+        // & > div {
+        //     margin-top: 50px;
+        // }
+
+        // & > div.footer-columns {
+        //     grid-area: content;
+        //     color: #2a475d;
+        
+
+        //     & div {
+        //         
+
+        //         & > span {
+        //             display: block;
+        //             padding-bottom: 20px; 
+        //             line-height: 30px;
+        //         }
+
+        //         & > a {
+        //             display: block;
+        //             text-decoration: none;
+        //             color: #2a475d;
+        //             line-height: 30px;
+        //             font-size: 18px;
+        //         }
+        //     }
+        // }
+
+        // & > div.column-two,
+        // & > div.column-three {
+        //     padding-top: 40px;
+
+        //     & a {
+        //         display: block;
+        //         text-decoration: none;
+        //         color: #2a475d;
+        //         padding-bottom: 20px; 
+        //     }
+        // }
     }
 }
 
-@media (min-width:1310px) { 
-    footer.bottom  > .container > section {
-        & > div.social {
-            display: flex;
-        }
-    }
-}
+// Tablet Devices
+// Medium      ≥768px  = 720px
+
+// @media (min-width:768px) { 
+//     footer.content {
+//         & .wrap {
+//             & > div {
+//                 display: grid;
+//                 grid-template-areas:
+//                     'logo logo logo'
+//                     'one two three';
+//                 grid-template-columns: 40% 30% 30%;
+//             }
+//         }
+//     }
+// }
+
+// footer.bottom {
+//     margin-top: 0 !important;
+//     background-color: #2a475d;
+//     height: $navHeight;
+//     line-height: $navHeight;
+//     color: white;
+
+//     & > .container > section {
+//         & > div.social {
+//             // display: flex;
+//             display: none;
+//             padding-left: 20px;
+    
+//             & a {
+//                 padding-left: 20px;
+//                 color: white;
+//                 text-decoration: none;
+    
+//                 &:hover {
+//                     color: #c5e2f0;
+//                 }
+    
+//                 & span {
+//                     display: none;
+//                 }
+//             }
+//         }
+    
+//         & > div.copy {
+//             padding-right: 20px;
+//             text-align: center;
+//             margin-top: 0;
+    
+//             & span {
+//                 display: none;
+//             }
+//         }
+//     }
+// }
+
+// @media (min-width:600px) { 
+//     footer.bottom  > .container > section {
+//         & > div.social {
+//             display: none;
+//         }
+
+//         & > div.copy {
+//             text-align: center;
+
+//             span {
+//                 display: inline;
+//             }
+//         }
+//     }
+// }
+
+// @media (min-width:800px) {
+//     footer.content {
+//         & > .container > section {
+//             & > div {
+//                 display: grid;
+//                 grid-template-areas:
+//                     'logo logo logo'
+//                     'colone coltwo colthree';
+//                 grid-template-columns: 50% 25% 25%;
+//                 padding-bottom: 20px;
+    
+//                 & > div.column-one {
+//                     grid-area: colone;
+//                     color: #2a475d;
+//                     padding-left: 20px;
+    
+//                     & span {
+//                         display: block;
+//                         padding-bottom: 20px; 
+//                     }
+//                 }
+    
+//                 & > div.column-two,
+//                 & > div.column-three {
+//                     display: block;
+//                     padding-top: 40px;
+    
+//                     & a {
+//                         display: block;
+//                         text-decoration: none;
+//                         color: #2a475d;
+//                         padding-bottom: 20px; 
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
+// @media (min-width:1310px) { 
+//     footer.bottom  > .container > section {
+//         & > div.social {
+//             display: flex;
+//         }
+//     }
+// }
